# haskell-learn

./: LICENSE  haskell-learn.cabal
app/: Main.hs
src/: Lib.hs
test/: Spec.hs
