name:                haskell-learn
version:             0.1.0.0
synopsis:            Learning Haskell
description:         Please see README.md
homepage:            https://github.com/githubuser/haskell-learn#readme
license:             BSD3
license-file:        LICENSE
author:              Michal Ciesla
maintainer:          mci@post.cz
copyright:           2017 Michal Ciesla
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haskell-learn-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-learn
  default-language:    Haskell2010

test-suite haskell-learn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-learn
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-learn
